@@ -6,7 +6,7 @@
  */
 package org.elasticsearch.protocol.xpack;
 
-import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.StreamInput;
@@ -31,7 +31,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 
@@ -342,7 +341,7 @@ public class XPackInfoResponse extends ActionResponse implements ToXContentObjec
         @Override
         public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
             builder.startObject();
-            List<String> names = new ArrayList<>(this.featureSets.keySet()).stream().sorted().collect(Collectors.toList());
+            List<String> names = new ArrayList<>(this.featureSets.keySet()).stream().sorted().toList();
             for (String name : names) {
                 builder.field(name, featureSets.get(name), params);
             }
@@ -362,15 +361,15 @@ public class XPackInfoResponse extends ActionResponse implements ToXContentObjec
 
             public FeatureSet(StreamInput in) throws IOException {
                 this(in.readString(), readAvailable(in), in.readBoolean());
-                if (in.getTransportVersion().before(TransportVersion.V_8_0_0)) {
-                    in.readMap(); // backcompat reading native code info, but no longer used here
+                if (in.getTransportVersion().before(TransportVersions.V_8_0_0)) {
+                    in.readGenericMap(); // backcompat reading native code info, but no longer used here
                 }
             }
 
             // this is separated out so that the removed description can be read from the stream on construction
             // TODO: remove this for 8.0
             private static boolean readAvailable(StreamInput in) throws IOException {
-                if (in.getTransportVersion().before(TransportVersion.V_7_3_0)) {
+                if (in.getTransportVersion().before(TransportVersions.V_7_3_0)) {
                     in.readOptionalString();
                 }
                 return in.readBoolean();
@@ -379,12 +378,12 @@ public class XPackInfoResponse extends ActionResponse implements ToXContentObjec
             @Override
             public void writeTo(StreamOutput out) throws IOException {
                 out.writeString(name);
-                if (out.getTransportVersion().before(TransportVersion.V_7_3_0)) {
+                if (out.getTransportVersion().before(TransportVersions.V_7_3_0)) {
                     out.writeOptionalString(null);
                 }
                 out.writeBoolean(available);
                 out.writeBoolean(enabled);
-                if (out.getTransportVersion().before(TransportVersion.V_8_0_0)) {
+                if (out.getTransportVersion().before(TransportVersions.V_8_0_0)) {
                     out.writeGenericMap(Collections.emptyMap());
                 }
             }
