@@ -35,7 +35,7 @@ public class SearchableSnapshotsStatsResponse extends BroadcastResponse {
 
     SearchableSnapshotsStatsResponse(StreamInput in) throws IOException {
         super(in);
-        this.stats = in.readList(SearchableSnapshotShardStats::new);
+        this.stats = in.readCollectionAsList(SearchableSnapshotShardStats::new);
     }
 
     SearchableSnapshotsStatsResponse(
@@ -73,7 +73,7 @@ public class SearchableSnapshotsStatsResponse extends BroadcastResponse {
     @Override
     public void writeTo(StreamOutput out) throws IOException {
         super.writeTo(out);
-        out.writeList(stats);
+        out.writeCollection(stats);
     }
 
     @Override
@@ -94,7 +94,7 @@ public class SearchableSnapshotsStatsResponse extends BroadcastResponse {
                 .map(ShardRouting::index)
                 .sorted(Index.COMPARE_BY_NAME)
                 .distinct()
-                .collect(toList());
+                .toList();
 
             for (Index index : indices) {
                 builder.startObject(index.getName());
@@ -117,7 +117,7 @@ public class SearchableSnapshotsStatsResponse extends BroadcastResponse {
                             List<SearchableSnapshotShardStats> listOfStats = getStats().stream()
                                 .filter(dirStats -> dirStats.getShardRouting().index().equals(index))
                                 .sorted(Comparator.comparingInt(dir -> dir.getShardRouting().getId()))
-                                .collect(Collectors.toList());
+                                .toList();
 
                             int minShard = listOfStats.stream()
                                 .map(stat -> stat.getShardRouting().getId())
