@@ -9,12 +9,12 @@ package org.elasticsearch.xpack.security;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.transport.TcpTransport;
+import org.elasticsearch.test.MockUtils;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -79,24 +79,18 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
     }
 
     public void testAvailable() {
-        SecurityInfoTransportAction featureSet = new SecurityInfoTransportAction(
-            mock(TransportService.class),
-            mock(ActionFilters.class),
-            settings
-        );
+        TransportService transportService = MockUtils.setupTransportServiceWithThreadpoolExecutor();
+        SecurityInfoTransportAction featureSet = new SecurityInfoTransportAction(transportService, mock(ActionFilters.class), settings);
         assertThat(featureSet.available(), is(true));
     }
 
     public void testEnabled() {
-        SecurityInfoTransportAction featureSet = new SecurityInfoTransportAction(
-            mock(TransportService.class),
-            mock(ActionFilters.class),
-            settings
-        );
+        TransportService transportService = MockUtils.setupTransportServiceWithThreadpoolExecutor();
+        SecurityInfoTransportAction featureSet = new SecurityInfoTransportAction(transportService, mock(ActionFilters.class), settings);
         assertThat(featureSet.enabled(), is(true));
 
         Settings disabled = Settings.builder().put(XPackSettings.SECURITY_ENABLED.getKey(), false).build();
-        featureSet = new SecurityInfoTransportAction(mock(TransportService.class), mock(ActionFilters.class), disabled);
+        featureSet = new SecurityInfoTransportAction(transportService, mock(ActionFilters.class), disabled);
         assertThat(featureSet.enabled(), is(false));
     }
 
@@ -149,10 +143,7 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         final boolean httpIpFilterEnabled = randomBoolean();
         final boolean transportIPFilterEnabled = randomBoolean();
         when(ipFilter.usageStats()).thenReturn(
-            MapBuilder.<String, Object>newMapBuilder()
-                .put("http", Collections.singletonMap("enabled", httpIpFilterEnabled))
-                .put("transport", Collections.singletonMap("enabled", transportIPFilterEnabled))
-                .map()
+            Map.of("http", Map.of("enabled", httpIpFilterEnabled), "transport", Map.of("enabled", transportIPFilterEnabled))
         );
 
         final boolean rolesStoreEnabled = randomBoolean();
@@ -295,23 +286,21 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
 
                 assertThat(source.getValue("ssl.http.enabled"), is(httpSSLEnabled));
                 assertThat(source.getValue("ssl.transport.enabled"), is(transportSSLEnabled));
-                if (TcpTransport.isUntrustedRemoteClusterEnabled()) {
-                    if (remoteClusterServerEnabled) {
-                        assertThat(source.getValue("ssl.remote_cluster_server.enabled"), is(remoteClusterServerSslEnabled));
-                    } else {
-                        assertThat(source.getValue("ssl.remote_cluster_server.enabled"), nullValue());
-                    }
-                    assertThat(source.getValue("ssl.remote_cluster_client.enabled"), is(remoteClusterClientSslEnabled));
-                    assertThat(source.getValue("remote_cluster_server.available"), is(remoteClusterServerAvailable));
-                    assertThat(source.getValue("remote_cluster_server.enabled"), is(remoteClusterServerEnabled));
-                    if (apiKeyServiceEnabled) {
-                        assertThat(source.getValue("remote_cluster_server.api_keys.total"), equalTo(crossClusterApiKeyUsage.get("total")));
-                        assertThat(source.getValue("remote_cluster_server.api_keys.ccs"), equalTo(ccsKeys));
-                        assertThat(source.getValue("remote_cluster_server.api_keys.ccr"), equalTo(ccrKeys));
-                        assertThat(source.getValue("remote_cluster_server.api_keys.ccs_ccr"), equalTo(ccsCcrKeys));
-                    } else {
-                        assertThat(source.getValue("remote_cluster_server.api_keys"), anEmptyMap());
-                    }
+                if (remoteClusterServerEnabled) {
+                    assertThat(source.getValue("ssl.remote_cluster_server.enabled"), is(remoteClusterServerSslEnabled));
+                } else {
+                    assertThat(source.getValue("ssl.remote_cluster_server.enabled"), nullValue());
+                }
+                assertThat(source.getValue("ssl.remote_cluster_client.enabled"), is(remoteClusterClientSslEnabled));
+                assertThat(source.getValue("remote_cluster_server.available"), is(remoteClusterServerAvailable));
+                assertThat(source.getValue("remote_cluster_server.enabled"), is(remoteClusterServerEnabled));
+                if (apiKeyServiceEnabled) {
+                    assertThat(source.getValue("remote_cluster_server.api_keys.total"), equalTo(crossClusterApiKeyUsage.get("total")));
+                    assertThat(source.getValue("remote_cluster_server.api_keys.ccs"), equalTo(ccsKeys));
+                    assertThat(source.getValue("remote_cluster_server.api_keys.ccr"), equalTo(ccrKeys));
+                    assertThat(source.getValue("remote_cluster_server.api_keys.ccs_ccr"), equalTo(ccsCcrKeys));
+                } else {
+                    assertThat(source.getValue("remote_cluster_server.api_keys"), anEmptyMap());
                 }
             } else {
                 assertThat(source.getValue("ssl"), is(nullValue()));
@@ -377,10 +366,12 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
     }
 
     private SecurityUsageTransportAction newUsageAction(Settings settings) {
+        ThreadPool threadPool = mock(ThreadPool.class);
+        TransportService transportService = MockUtils.setupTransportServiceWithThreadpoolExecutor();
         return new SecurityUsageTransportAction(
-            mock(TransportService.class),
+            transportService,
             null,
-            null,
+            threadPool,
             mock(ActionFilters.class),
             null,
             settings,
